Bug 456787 - Inconsistent behaviour while changing brush size with a shortcut
Summary: Inconsistent behaviour while changing brush size with a shortcut
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.6
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Yu-Hsuan Lai
URL:
Keywords: testcase, triaged
Depends on:
Blocks:
 
Reported: 2022-07-16 03:54 UTC by Yu-Hsuan Lai
Modified: 2023-11-26 11:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
brush tip (180.11 KB, image/png)
2022-08-15 12:04 UTC, Yu-Hsuan Lai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yu-Hsuan Lai 2022-07-16 03:54:45 UTC
SUMMARY
It's a very small but annoying bug. You need to press ] twice to go from 1px to 3px, but pressing [ once will bring you back to 1px.

STEPS TO REPRODUCE
1. Set the brush size to 1px
2. Press ] to increase brush size, now it's 2px
3. Press ] again, now it's 3px
4. Press [ to decrease brush size

OBSERVED RESULT
Brush size is 1px

EXPECTED RESULT
Brush size is 2px

SOFTWARE/OS VERSIONS
All

ADDITIONAL INFORMATION
It's a very small but annoying bug, especially while doing finer lineart.
Comment 1 Halla Rempt 2022-08-01 13:27:59 UTC
I cannot reproduce this with basic-4 flow opacity. Which preset are you using?
Comment 2 Yu-Hsuan Lai 2022-08-15 12:04:56 UTC
Created attachment 151337 [details]
brush tip

(In reply to Halla Rempt from comment #1)
> I cannot reproduce this with basic-4 flow opacity. Which preset are you
> using?

Basic-3 Flow. But here is the catch: this bug only happens when I set the brush tip to "chisel_eroded" (I'm not sure if it's built-in one)
Comment 3 wolthera 2023-01-26 13:14:44 UTC
I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7
Comment 4 Dmitry Kazakov 2023-11-24 13:16:38 UTC
Git commit 2210c5415d7793653fbd6b97495bf41cf72bf954 by Dmitry Kazakov.
Committed on 24/11/2023 at 14:16.
Pushed by dkazakov into branch 'master'.

Fix jumps just adjusting brush size with '[' and ']' shortcuts

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/-/commit/2210c5415d7793653fbd6b97495bf41cf72bf954
Comment 5 Dmitry Kazakov 2023-11-26 11:55:13 UTC
Git commit 3303fc1340939c7b7c0ef51bea59b10bc43ff7ee by Dmitry Kazakov.
Committed on 26/11/2023 at 12:54.
Pushed by dkazakov into branch 'krita/5.2'.

Fix jumps just adjusting brush size with '[' and ']' shortcuts

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/-/commit/3303fc1340939c7b7c0ef51bea59b10bc43ff7ee