Fix jumps just adjusting brush size with '[' and ']' shortcuts

BUG:456787